2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: small fix to the previous commit
	in how layers are skipped.

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: don't load any layers from a TIFF
	directory which don't match the mode of the first image in the TIFF
	directory.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/errors.[ch]: added errors_exit() and unset the Gimp
	reference. Errors may occur after the Gimp object has been finalized.

	* app/app.c (app_run): call errors_exit().

2007-06-12  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): Instead of passing any
	file to libexif blindly, check first that some JPEG APP1 marker
	contains the EXIF header.

	* plug-ins/jpeg/jpeg-exif.c (jpeg_apply_exif_data_to_image):
	removed the tests that were checking for the presence of some EXIF
	tags such as the EXIF version before deciding if the data should
	be processed or not (bug #446809).

2007-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c: initialize the GtkAdjustment used
	for the rotation angle; fixes bug #446681.

2007-06-12  Sven Neumann  <sven@gimp.org>

	* app/base/boundary.c (simplify_subdivide): eliminate calls to sqrt().

2007-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-load.c: applied slightly modified patch from
	Eric Ross that adds support for loading long layer names from the
	extra layer data section (bug #445316).

2007-06-11  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla that further improves the
	boundary_sort() performance (bug #388538):

	* base/boundary.c (cmp_xy): use "y" coordinate as more significant
	one, i.e. compare (ay, ax) to (by, bx), not (ax, ay) to (bx, by).

	* configure.in: bumped version to 2.3.19.
	
2007-06-11  Sven Neumann  <sven@gimp.org>

	* Made 2.3.18 development release.

2007-06-11  Michael Schumacher  <schumaml@cvs.gnome.org>
